bk_ida/sjengida/c2/extended_in_check
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/extended_in_check/src/moves.c:1702:7: error: use of undeclared identifier 'dword_66759C'
v10 = dword_66759C[bking_loc]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/extended_in_check/src/moves.c:1742:8: error: use of undeclared identifier 'dword_66759C'
if ( ( dword_66759C[wking_loc] & 0xFFFFFFFD) == 8 ) 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/extended_in_check/src/obj/moves.o] Error 1
